--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ Stay tuned ...
 
 <h2 id="tutors">Organizers</h2>
 
-Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎, Cristina Funk, Felipe Ferreira, Gabriel Ilharco, Georg Osang, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino, Thomas Leung and Vaiva Imbrasaite.
+Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎, Christina Funk, Felipe Ferreira, Gabriel Ilharco, Georg Osang, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino, Thomas Leung and Vaiva Imbrasaite.
 
 
 <h2 id="tutors">Acknowledgements</h2>
 
-We would like to thank Mehmet Aktuna, Vladimir Chtchetkine, Andrey Vlasov, Tobias Kaufmann, David Sklar, Abby Schantz, Aly Grealish, Clayton Williams, Pete Aykroyd, Lei Shi, Yifan Xu, Zach Hynes, Devi Krishna, John Palowitch Richa Dixit, Tom Boulos, Steve Pucci, Maria Voitovich, Jialu Liu, Dan Finnie, Luís Valente, Abe Ittycheriah, Mor Naaman, Isabelle Augenstein, Arkaitz Zubiaga, Elena Kochkina, Arjun Gopalan, Da-Cheng Juan, Allan Heydon, Natalia P, Jordan Boyd-Graber, Chen Sun, Cong Yu, Tania Bedrax-Weiss, Cordelia Schmid, Rahul Sukthankar and Françoise Beaufays.
+We would like to thank Mehmet Aktuna, Vladimir Chtchetkine, Andrey Vlasov, Tobias Kaufmann, David Sklar, Abby Schantz, Aly Grealish, Clayton Williams, Pete Aykroyd, Lei Shi, Yifan Xu, Zach Hynes, Devi Krishna, John Palowitch, Richa Dixit, Tom Boulos, Steve Pucci, Maria Voitovich, Jialu Liu, Dan Finnie, Luís Valente, Abe Ittycheriah, Mor Naaman, Isabelle Augenstein, Arkaitz Zubiaga, Elena Kochkina, Arjun Gopalan, Da-Cheng Juan, Allan Heydon, Natalia P, Jordan Boyd-Graber, Chen Sun, Cong Yu, Tania Bedrax-Weiss, Cordelia Schmid, Rahul Sukthankar and Françoise Beaufays.
 
       
     </main>
