Organizer name update

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Stay tuned ...
 
 <h2 id="tutors">Organizers</h2>
 
-Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎, Christina Funk, Felipe Ferreira, Gabriel Ilharco, Georg Osang, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino, Thomas Leung and Vaiva Imbrasaite.
+Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎, Christina Liu, Felipe Ferreira, Gabriel Ilharco, Georg Osang, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino, Thomas Leung and Vaiva Imbrasaite.
 
 
 <h2 id="tutors">Acknowledgements</h2>
