--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <h2 id="welcome">Welcome</h2>
 
-<p>New social technologies and widespread access to the internet have allowed for new forms of content creation, connectivity and information sharing. With vast unstructured data and limited labels, organizing and reconciling information from different sources and modalities with bounded supervision is one of the current challenges in machine learning. This tutorial focuses on models and approaches for recognizing multimodal entailment, and uses as case study two real-world multi-domain datasets which prompt for understanding the fine-grained visual and linguistic semantics.</p>
+<p>New social technologies and widespread access to the internet have allowed for new forms of content creation, connectivity and information sharing. With vast unstructured data and limited labels, organizing and reconciling information from different sources and modalities with bounded supervision is one of the current challenges in machine learning. This cutting-edge tutorial focuses on models and approaches for recognizing multimodal entailment, and uses as case study a real-world multi-domain dataset which prompts for understanding the fine-grained visual and linguistic semantics.</p>
 
 <h2 id="venue">Venue</h2>
 
@@ -54,7 +54,118 @@
 
 <h2 id="outline">Outline</h2>
 
-Stay tuned ...
+<table>
+   <tbody>
+      <tr>
+         <td>Section</td>
+         <td>Subsection</td>
+         <td style="text-align:right;">min</td>
+      </tr>
+      <tr>
+         <td rowspan="2">Introduction
+            <br>
+         </td>
+         <td>The landscape of online content</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td>A case for multimodal entailment inferences</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td rowspan="3">Natural
+            <br>
+            Language
+            <br>
+            Processing
+         </td>
+         <td>From word embeddings to contextualized representations</td>
+         <td style="text-align:right;">15</td>
+      </tr>
+      <tr>
+         <td>Fine-tuning pretrained models on downstream tasks</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td>The textual entailment problem</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td rowspan="2">Structured Data
+            <br>
+         </td>
+         <td>Semi-structured and tabular text</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td>Knowledge graphs</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td>Neural Graph Learning</td>
+         <td>Leveraging structured signals with Neural Structured Learning</td>
+         <td style="text-align:right;">10</td>
+      </tr>
+      <tr>
+         <td>Computer Vision</td>
+         <td>Foundations of Computer Vision</td>
+         <td style="text-align:right;">20</td>
+      </tr>
+      <tr>
+         <td>Break</td>
+         <td>-</td>
+         <td style="text-align:right;">10</td>
+      </tr>
+      <tr>
+         <td rowspan="3">Multimodal Learning
+            <br><br>
+         </td>
+         <td>Learning joint representations for visual and language tasks</td>
+         <td style="text-align:right;">25</td>
+      </tr>
+      <tr>
+         <td>Self-Supervised Multimodal Versatile Networks</td>
+         <td style="text-align:right;">15</td>
+      </tr>
+      <tr>
+         <td>Case studies: cross-modal fine-grained reasoning</td>
+         <td style="text-align:right;">20</td>
+      </tr>
+      <tr>
+         <td>Break</td>
+         <td>-</td>
+         <td style="text-align:right;">10</td>
+      </tr>
+      <tr>
+         <td rowspan="2">Multimodal entailment
+            <br>
+         </td>
+         <td>Multimodal models for entailment inferences</td>
+         <td style="text-align:right;">20</td>
+      </tr>
+      <tr>
+         <td>Multimodal entailment with Tensorflow on Colab</td>
+         <td style="text-align:right;">20</td>
+      </tr>
+      <tr>
+         <td rowspan="2">Final considerations
+            <br>
+         </td>
+         <td>Closing notes</td>
+         <td style="text-align:right;">5</td>
+      </tr>
+      <tr>
+         <td>Q&amp;A</td>
+         <td style="text-align:right;">10</td>
+      </tr>
+      <tr>
+         <td>Total</td>
+         <td>–</td>
+         <td style="text-align:right;">210</td>
+      </tr>
+   </tbody>
+</table>
+
 
 <h2 id="slides">Slides</h2>
 
@@ -76,7 +187,7 @@ Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎
 
 <h2 id="tutors">Acknowledgements</h2>
 
-We would like to thank Mehmet Aktuna, Vladimir Chtchetkine, Andrey Vlasov, Tobias Kaufmann, David Sklar, Abby Schantz, Aly Grealish, Clayton Williams, Pete Aykroyd, Lei Shi, Yifan Xu, Zach Hynes, Devi Krishna, John Palowitch, Richa Dixit, Tom Boulos, Steve Pucci, Maria Voitovich, Jialu Liu, Dan Finnie, Luís Valente, Abe Ittycheriah, Mor Naaman, Isabelle Augenstein, Arkaitz Zubiaga, Elena Kochkina, Arjun Gopalan, Da-Cheng Juan, Allan Heydon, Natalia P, Jordan Boyd-Graber, Chen Sun, Cong Yu, Tania Bedrax-Weiss, Cordelia Schmid, Rahul Sukthankar and Françoise Beaufays.
+We would like to thank Mehmet Aktuna, Vladimir Chtchetkine, Andrey Vlasov, Tobias Kaufmann, David Sklar, Abby Schantz, Aly Grealish, Clayton Williams, Pete Aykroyd, Lei Shi, Yifan Xu, Zach Hynes, Devi Krishna, John Palowitch, Richa Dixit, Tom Boulos, Steve Pucci, Maria Voitovich, Jialu Liu, Dan Finnie, John Cantwell, Ashwin Kakarla, Luís Valente, Abe Ittycheriah, Mor Naaman, Isabelle Augenstein, Arkaitz Zubiaga, Elena Kochkina, Arjun Gopalan, Da-Cheng Juan, Allan Heydon, Natalia P, Jordan Boyd-Graber, Chen Sun, Cong Yu, Tania Bedrax-Weiss, Cordelia Schmid, Rahul Sukthankar and Françoise Beaufays.
 
       
     </main>
