--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
 
       <h2 id="welcome">Welcome</h2>
 
-<p>New social technologies and widespread access to the internet have allowed for new forms of content creation, connectivity and information sharing. With vast unstructured data and limited labels, organizing and reconciling information from different sources and modalities with bounded supervision is one of the current challenges in machine learning. This cutting-edge tutorial focuses on models and approaches for recognizing multimodal entailment, and uses as case study a real-world multi-domain dataset which prompts for understanding the fine-grained visual and linguistic semantics.</p>
+<p>How information is created, shared and consumed has changed rapidly in recent decades, in part thanks to new social platforms and technologies on the web. With ever-larger amounts of unstructured and limited labels, organizing and reconciling information from different sources and modalities is a central challenge in machine learning.
+<br>
+This cutting-edge tutorial aims to introduce the multimodal entailment task, which can be useful for detecting semantic alignments when a single modality alone does not suffice for a whole content understanding. Starting with a brief overview of natural language processing, computer vision, structured data and neural graph learning, we lay the foundations for the multimodal sections to follow. We then discuss recent multimodal learning literature covering visual, audio and language streams, and explore case studies focusing on tasks which require fine-grained understanding of visual and linguistic semantics question answering, veracity and hatred classification. Finally, we introduce a new dataset for recognizing multimodal entailment, exploring it in a hands-on collaborative section. 
+<br>
+Overall, this tutorial gives an overview of multimodal learning, introduces a multimodal entailment dataset, and encourages future research in the topic.
+</p>
 
 <h2 id="venue">Venue</h2>
 
-<p>The <em>Recognizing Multimodal Entailment</em> tutorial will be held virtually at <a href="https://2021.aclweb.org/"><em>ACL-IJCNLP 2021: The Joint Conference of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing</em></a> on Sunday, August 1th, 2021.</p>
+<p>The <em>Recognizing Multimodal Entailment</em> tutorial will be held virtually at <a href="https://2021.aclweb.org/"><em>ACL-IJCNLP 2021: The Joint Conference of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing</em></a> on Sunday, August 1st, 2021.</p>
 
 <h2 id="outline">Outline</h2>
 
@@ -187,7 +192,7 @@ Afsaneh Shirazi, Arsha Nagrani, Blaž Bratanič, Cesar Ilharco, Chris Bregler‎
 
 <h2 id="tutors">Acknowledgements</h2>
 
-We would like to thank Mehmet Aktuna, Vladimir Chtchetkine, Andrey Vlasov, Tobias Kaufmann, David Sklar, Abby Schantz, Aly Grealish, Clayton Williams, Pete Aykroyd, Lei Shi, Yifan Xu, Zach Hynes, Devi Krishna, John Palowitch, Richa Dixit, Tom Boulos, Steve Pucci, Maria Voitovich, Jialu Liu, Dan Finnie, John Cantwell, Ashwin Kakarla, Luís Valente, Abe Ittycheriah, Mor Naaman, Isabelle Augenstein, Arkaitz Zubiaga, Elena Kochkina, Arjun Gopalan, Da-Cheng Juan, Allan Heydon, Natalia P, Jordan Boyd-Graber, Chen Sun, Cong Yu, Tania Bedrax-Weiss, Cordelia Schmid, Rahul Sukthankar and Françoise Beaufays.
+We would like to thank Abby Schantz, Abe Ittycheriah, Aliaksei Severyn, Allan Heydon, Aly Grealish, Andrey Vlasov, Arjun Gopalan, Arkaitz Zubiaga, Ashwin Kakarla, Chen Sun, Clayton Williams, Cong Yu, Cordelia Schmid, Da-Cheng Juan, Dan Finnie, Dani Valevski, Daniel Rocha, David Price, David Sklar, Devi Krishna, Elena Kochkina, Enrique Alfonseca, Françoise Beaufays, Isabelle Augenstein, Jialu Liu, John Cantwell, John Palowitch, Jordan Boyd-Graber, Lei Shi, Luís Valente, Maria Voitovich, Mehmet Aktuna, Mogan Brown, Mor Naaman, Natalia P, Nidhi Hebbar, Pete Aykroyd, Rahul Sukthankar, Richa Dixit, Steve Pucci, Tania Bedrax-Weiss, Tobias Kaufmann, Tom Boulos, Tu Tsao, Vladimir Chtchetkine, Yair Kurzion, Yifan Xu and Zach Hynes.
 
       
     </main>
