--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
          <td rowspan="3">Multimodal Learning
             <br><br>
          </td>
-         <td>Learning joint representations for visual and language tasks</td>
-         <td style="text-align:right;">25</td>
+         <td>Attention Bottlenecks for Multimodal Fusion: state-of-the-art audio-visual classifications</td>
+         <td style="text-align:right;">20</td>
       </tr>
       <tr>
-         <td>Self-Supervised Multimodal Versatile Networks</td>
-         <td style="text-align:right;">15</td>
+         <td>Self-Supervised Multimodal Versatile Networks:  visual, audio and language streams</td>
+         <td style="text-align:right;">20</td>
       </tr>
       <tr>
          <td>Case studies: cross-modal fine-grained reasoning</td>
@@ -181,9 +181,9 @@ Stay tuned ...
 Stay tuned ...
 
 
-<h2 id="tutors">Tutors</h2>
+<h2 id="tutors">Presenters</h2>
 
-Stay tuned ...
+A subset of the organizers. Stay tuned ...
 
 <h2 id="tutors">Organizers</h2>
 
