--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Stay tuned ...
 
 <h2 id="tutors">Presenters</h2>
 
-Afsaneh Shirazi, Arjun Gopalan, Arsha Nagrani, Cesar Ilharco, Christina Liu, Gabriel Barcik, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao and Ricardo Marino.
+Afsaneh Shirazi, Arjun Gopalan, Arsha Nagrani, Cesar Ilharco, Christina Liu, Gabriel Barcik, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino and Roma Patel.
 
 <h2 id="tutors">Organizers</h2>
 
