--- a/index.html
+++ b/index.html
@@ -183,7 +183,115 @@ Stay tuned ...
 
 <h2 id="tutors">Presenters</h2>
 
-Afsaneh Shirazi, Arjun Gopalan, Arsha Nagrani, Cesar Ilharco, Christina Liu, Gabriel Barcik, Jannis Bulian, Jared Frank, Lucas Smaira, Qin Cao, Ricardo Marino and Roma Patel.
+<div style="display: flex">
+  <div style="width:250px;" align="center">
+    <img alt="Afsaneh Shirazi" src="./images/afsaneh_shirazi.jpg" style="max-width:100%;">
+    </a><br>
+    Afsaneh Shirazi,<br>Google
+  </div>
+  
+  <div style="width:2%">
+  </div>
+  
+  <div style="width:250px;" align="center">
+    <img alt="Arjun Gopalan" src="./images/arjun_gopalan.jpg" style="max-width:100%;">
+    </a><br>
+    Arjun Gopalan,<br>Google Research
+  </div>
+
+  <div style="width:2%">
+  </div>
+
+  <div style="width:250px;" align="center">
+    <img alt="Arsha Nagrani" src="./images/arsha_nagrani.jpg" style="max-width:100%;">
+    </a><br>
+    Arsha Nagrani,<br>Google Research
+  </div>
+</div>
+
+<br>
+
+<div style="display: flex">
+  <div style="width:250px;" align="center">
+    <img alt="Cesar Ilharco" src="./images/cesar_ilharco.jpg" style="max-width:100%;">
+    </a><br>
+    Cesar Ilharco,<br>Google
+  </div>
+  
+  <div style="width:2%">
+  </div>
+  
+  <div style="width:250px;" align="center">
+    <img alt="Christina Liu" src="./images/christina_liu.jpg" style="max-width:100%;">
+    </a><br>
+    Christina Liu,<br>Google Research
+  </div>
+
+  <div style="width:2%">
+  </div>
+
+  <div style="width:250px;" align="center">
+    <img alt="Gabriel Barcik" src="./images/gabriel_barcik.jpg" style="max-width:100%;">
+    </a><br>
+    Gabriel Barcik,<br>Google Research
+  </div>
+</div>
+
+<br>
+
+<div style="display: flex">
+  <div style="width:250px;" align="center">
+    <img alt="Jannis Bulian" src="./images/jannis_bulian.jpg" style="max-width:100%;">
+    </a><br>
+    Jannis Bulian,<br>Google Research
+  </div>
+  
+  <div style="width:2%">
+  </div>
+  
+  <div style="width:250px;" align="center">
+    <img alt="Jared Frank" src="./images/jared_frank.jpg" style="max-width:100%;">
+    </a><br>
+    Jared Frank,<br>Google
+  </div>
+
+  <div style="width:2%">
+  </div>
+
+  <div style="width:250px;" align="center">
+    <img alt="Lucas Smaira" src="./images/lucas_smaira.jpg" style="max-width:100%;">
+    </a><br>
+    Lucas Smaira,<br>DeepMind
+  </div>
+</div>
+<br>
+
+<div style="display: flex">
+  <div style="width:250px;" align="center">
+    <img alt="Qin Cao" src="./images/qin_cao.jpg" style="max-width:100%;">
+    </a><br>
+    Qin Cao,<br>Google Research
+  </div>
+  
+  <div style="width:2%">
+  </div>
+  
+  <div style="width:250px;" align="center">
+    <img alt="Ricardo Marino" src="./images/ricardo_marino.jpg" style="max-width:100%;">
+    </a><br>
+    Ricardo Marino,<br>Google
+  </div>
+
+  <div style="width:2%">
+  </div>
+
+  <div style="width:250px;" align="center">
+    <img alt="Roma Patel" src="./images/roma_patel.jpg" style="max-width:100%;">
+    </a><br>
+    Roma Patel,<br>Brown University
+  </div>
+</div>
+
 
 <h2 id="tutors">Organizers</h2>
 
