--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 
 <h2 id="slides">Slides</h2>
 
-Stay tuned ...
+<iframe
+  src="https://docs.google.com/presentation/d/1mAB31BCmqzfedreNZYn4hsKPFmgHA9Kxz219DzyRY3c/embed?usp=sharing&resourcekey=0-ndOW4fXhhrY_cuvDU4Wcxw"
+  frameborder="0"
+  width="800"
+  height="600"
+></iframe>
 
 <h2 id="reading-list">Reading list</h2>
 
