--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
             <br><br>
          </td>
          <td>Attention Bottlenecks for Multimodal Fusion: state-of-the-art audio-visual classifications</td>
-         <td style="text-align:right;">20</td>
+         <td style="text-align:right;">10</td>
       </tr>
       <tr>
          <td>Self-Supervised Multimodal Versatile Networks:  visual, audio and language streams</td>
@@ -146,11 +146,11 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
             <br>
          </td>
          <td>Multimodal models for entailment inferences</td>
-         <td style="text-align:right;">20</td>
+         <td style="text-align:right;">15</td>
       </tr>
       <tr>
-         <td>Multimodal entailment with Tensorflow on Colab</td>
-         <td style="text-align:right;">20</td>
+         <td>Multimodal entailment dataset</td>
+         <td style="text-align:right;">10</td>
       </tr>
       <tr>
          <td rowspan="2">Final considerations
@@ -166,7 +166,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
       <tr>
          <td>Total</td>
          <td>–</td>
-         <td style="text-align:right;">210</td>
+         <td style="text-align:right;">195</td>
       </tr>
    </tbody>
 </table>
