--- a/index.html
+++ b/index.html
@@ -183,7 +183,75 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 
 <h2 id="reading-list">Reading list</h2>
 
-Stay tuned ...
+<h3 id="natural-language-processing">Natural Language Processing</h3>
+
+<ul>
+<li><a href="https://arxiv.org/abs/1706.03762">Attention is all you need</a>, Vaswani et at., 2017.</li>
+<li><a href="https://arxiv.org/abs/1810.04805">BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding</a>, Devlin et at., 2018.</li>
+<li><a href="https://arxiv.org/abs/1706.03762">Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer</a>, Raffel et at., 2019.</li>
+<li><a href="https://github.com/tensorflow/workshops/tree/master/kdd2019">Deep Learning for NLP with Tensorflow</a>, Ilharco et at., 2019.</li>
+<li><a href="http://gabrielilharco.com/publications/EMNLP_2020_Tutorial__High_Performance_NLP.pdf">High Performance Natural Language Processing</a>, Ilharco et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2005.14165">Language Models are Few-Shot Learners</a>, Brown et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2006.16668">GShard: Scaling Giant Models with Conditional Computation and Automatic Sharding</a>, Lepikhin et at., 2020.</li>
+<li><a href="https://www.microsoft.com/en-us/research/blog/deepspeed-extreme-scale-model-training-for-everyone/">DeepSpeed: Extreme-scale model training for everyone</a>, Majumder et at., 2020.</li>
+</ul>
+
+<h3 id="neural-graph-learning">Textual Entailment</h3>
+
+<ul>
+<li><a href="https://allenai.org/content/team/peterc/publications/RTE7_overview.proceedings.pdf">The Seventh PASCAL Recognizing Textual Entailment Challenge</a>, Bentivogli et at., 2011.</li>
+<li><a href="https://www.mitpressjournals.org/doi/full/10.1162/COLI_a_00097">Did It Happen? The Pragmatic Complexity of Veridicality Assessment</a>, de Marneffe et at., 2012.</li>
+<li><a href="https://cims.nyu.edu/~sbowman/multinli/">The Multi-Genre Natural Language Inference (MultiNLI) corpus</a>, Williams et at., 2017.</li>
+<li><a href="https://arxiv.org/abs/1809.05053">XNLI: Evaluating Cross-lingual Sentence Representations</a>, Conneau et at., 2018.</li>
+</ul>
+
+<h3 id="neural-graph-learning">Structured Data</h3>
+
+<ul>
+<li><a href="https://dl.acm.org/doi/pdf/10.1145/3329781.3332266">Industry-scale Knowledge Graphs</a>, Noy et at., 2019.</li>
+<li><a href="https://www.meetup.com/NLP-Zurich/events/263974607/">Understanding categorical semantic compatibility in KG</a>, Muxagata et at., 2019.</li>
+</ul>
+
+
+<h3 id="neural-graph-learning">Neural Graph Learning</h3>
+
+<ul>
+<li><a href="https://arxiv.org/abs/1703.04818">Neural Graph Machines: Learning Neural Networks Using Graphs</a>, Bui et at., 2017.</li>
+<li><a href="https://github.com/tensorflow/neural-structured-learning/tree/master/workshops/kdd_2020">Neural Structured Learning: Training Neural Networks with Structured Signals</a>, Heydon et at., 2020.</li>
+</ul>
+
+<h3 id="multimodal-learning">Multimodal Learning</h3>
+
+<ul>
+<li><a href="https://people.csail.mit.edu/khosla/papers/icml2011_ngiam.pdf">Multimodal Deep Learning</a>, Ngiam et at., 2011.</li>
+<li><a href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/41473.pdf">DeViSE: A Deep Visual-Semantic Embedding Model</a>, Frome et at., 2013.</li>
+<li><a href="https://arxiv.org/abs/1804.02516">Learning a Text-Video Embedding from Incomplete and Heterogeneous Data</a>, Miech et at., 2018.</li>
+<li><a href="https://arxiv.org/abs/1904.01766">VideoBERT: A Joint Model for Video and Language Representation Learning</a>, Sun et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1906.03327">HowTo100M: Learning a Text-Video Embedding by Watching Hundred Million Narrated Video Clips</a>, Miech et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1906.05743">Learning Video Representations using Contrastive Bidirectional Transformer</a>, Sun et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1907.13487">Use What You Have: Video Retrieval Using Representations From Collaborative Experts</a>, Liu et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1908.04472">Exploiting Multi-domain Visual Information for Fake News Detection</a>, Qi et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1908.07490">LXMERT: Learning Cross-Modality Encoder Representations from Transformers</a>, Tan et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1910.03814">Exploring Hate Speech Detection in Multimodal Publications</a>, Gomez et at., 2019.</li>
+<li><a href="https://arxiv.org/abs/1908.08530">VL-BERT: Pre-training of Generic Visual-Linguistic Representations</a>, Su et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/1911.03854">r/Fakeddit: A New Multimodal Benchmark Dataset for Fine-grained Fake News Detection</a>, Nakamura et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/1912.02315">12-in-1: Multi-Task Vision and Language Representation Learning</a>, Lu et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2003.04981">SAFE: Similarity-Aware Multi-Modal Fake News Detection</a>, Zhou et at., 2020.</li>
+<li><a href="https://ieeexplore.ieee.org/document/9260096">Multimodal Multi-image Fake News Detection</a>, Giachanou et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2003.13594">Speech2Action: Cross-modal Supervision for Action Recognition</a>, Nagrani et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2004.04917">Multimodal Categorization of Crisis Events in Social Media</a>, Abavisani et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2005.06035">Cross-Modality Relevance for Reasoning on Language and Vision</a>, Zheng et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2006.16228">Self-Supervised MultiModal Versatile Networks</a>, Alayrac et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2007.10639">Multi-modal Transformer for Video Retrieval</a>, Gabeur et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2009.11278">X-LXMERT: Paint, Caption and Answer Questions with Multi-Modal Transformers</a>, Cho et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2005.04790">The Hateful Memes Challenge: Detecting Hate Speech in Multimodal Memes</a>, Kiela et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2101.06278">COSMOS: Catching Out-of-Context Misinformation with Self-Supervised Learning</a>, Aneja et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2101.00529">VinVL: Revisiting Visual Representations in Vision-Language Models</a>, Zhang et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2102.03334">ViLT: Vision-and-Language Transformer Without Convolution or Region Supervision</a>, Kim et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2102.15409">UNIMO: Towards Unified-Modal Understanding and Generation via Cross-Modal Contrastive Learning</a>, Li et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2104.06039">MultiModalQA: Complex Question Answering over Text, Tables and Images</a>, Talmor et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2107.00135">Attention Bottlenecks for Multimodal Fusion</a>, Nagrani et at., 2021.</li>
+</ul>
 
 
 <h2 id="tutors">Presenters</h2>
