--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
   height="600"
 ></iframe>
 
+<h2 id="slides">Dataset</h2>
+
+<a href="https://colab.research.google.com/github/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset.ipynb">Colab notebook</a> for Google Research recognizing-multimodal-entailment <a href="https://github.com/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset_v1.csv">dataset</a>.
+
 <h2 id="reading-list">Reading list</h2>
 
 <h3 id="natural-language-processing">Natural Language Processing</h3>
