--- a/index.html
+++ b/index.html
@@ -224,6 +224,25 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 <li><a href="https://github.com/tensorflow/neural-structured-learning/tree/master/workshops/kdd_2020">Neural Structured Learning: Training Neural Networks with Structured Signals</a>, Heydon et at., 2020.</li>
 </ul>
 
+<h3 id="neural-graph-learning">Computer Vision</h3>
+
+<ul>
+<li><a href="https://web.eecs.umich.edu/~jjcorso/t/598F14/files/lecture_0903_introduction.pdf">Foundations of Computer Vision</a>, Corso et at., 2014.</li>
+<li><a href="http://cs231n.stanford.edu/slides/2017/cs231n_2017_lecture11.pdf">CS231n: Detection and Segmentation</a>, Li et at., 2017.</li>
+<li><a href="http://cs231n.stanford.edu/">CS231n: Convolutional Neural Networks for Visual Recognition</a>, Li et at., 2021.</li>
+<li><a href="https://www.cs.cmu.edu/~efros/courses/LBMV07/Papers/viola-cvpr-01.pdf">Rapid Object Detection using a Boosted Cascade of Simple Features</a>, Viola et at., 2001.</li>
+<li><a href="http://yann.lecun.com/exdb/publis/pdf/lecun-bengio-95a.pdf">Convolutional Networks for Images, Speech, and Time-Series</a>, LeCun et at., 1998.</li>
+<li><a href="https://papers.nips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf">ImageNet Classification with Deep Convolutional Neural Networks</a>, Krizhevsky et at., 2012.</li>
+<li><a href="https://arxiv.org/abs/1704.04861">MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications</a>, Howard et at., 2017.</li>
+<li><a href="https://arxiv.org/abs/1905.11946">EfficientNet: Rethinking Model Scaling for Convolutional Neural Networks</a>, Tan et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2003.13678">Designing Network Design Spaces</a>, Radosavovic et at., 2020.</li>
+<li><a href="https://openai.com/blog/clip/">CLIP: Connecting Text and Images</a>, Radford et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2103.00020">Learning Transferable Visual Models From Natural Language Supervision</a>, Radford et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2002.05709">A Simple Framework for Contrastive Learning of Visual Representations</a>, Radford et at., 2021.</li>
+<li><a href="https://arxiv.org/abs/2006.07733">Bootstrap your own latent: A new approach to self-supervised Learning</a>, Grill et at., 2020.</li>
+<li><a href="https://arxiv.org/abs/2006.09882">Unsupervised Learning of Visual Features by Contrasting Cluster Assignments</a>, Caron et at., 2021.</li>
+</ul>
+
 <h3 id="multimodal-learning">Multimodal Learning</h3>
 
 <ul>
