--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 
 <h2 id="venue">Venue</h2>
 
-<p>The <em>Recognizing Multimodal Entailment</em> tutorial will be held virtually at <a href="https://2021.aclweb.org/"><em>ACL-IJCNLP 2021: The Joint Conference of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing</em></a> on Sunday, August 1st, 2021.</p>
+<p>The <em>Recognizing Multimodal Entailment</em> tutorial will be held live virtually at <a href="https://2021.aclweb.org/"><em>ACL-IJCNLP 2021: The Joint Conference of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing</em></a> on August 1st 2021 from 13:00 to 17:00 (UTC).
+<br><br>
+This and the full list of ACL-IJCNLP 2021 tutorials can be found on the <a href="https://2021.aclweb.org/tutorials/program/#t6-recognizing-multimodal-entailment">conference's program page</a>, and this tutorial session is held for event attendees on the <a href="https://underline.io/events/167/sessions?eventSessionId=6214">Underline platform</a>.
+</p>
 
 <h2 id="outline">Outline</h2>
 
@@ -200,6 +203,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 <li><a href="https://www.microsoft.com/en-us/research/blog/deepspeed-extreme-scale-model-training-for-everyone/">DeepSpeed: Extreme-scale model training for everyone</a>, Majumder et at., 2020.</li>
 </ul>
 
+
 <h3 id="neural-graph-learning">Textual Entailment</h3>
 
 <ul>
@@ -208,6 +212,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 <li><a href="https://cims.nyu.edu/~sbowman/multinli/">The Multi-Genre Natural Language Inference (MultiNLI) corpus</a>, Williams et at., 2017.</li>
 <li><a href="https://arxiv.org/abs/1809.05053">XNLI: Evaluating Cross-lingual Sentence Representations</a>, Conneau et at., 2018.</li>
 </ul>
+
 
 <h3 id="neural-graph-learning">Structured Data</h3>
 
@@ -223,6 +228,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 <li><a href="https://arxiv.org/abs/1703.04818">Neural Graph Machines: Learning Neural Networks Using Graphs</a>, Bui et at., 2017.</li>
 <li><a href="https://github.com/tensorflow/neural-structured-learning/tree/master/workshops/kdd_2020">Neural Structured Learning: Training Neural Networks with Structured Signals</a>, Heydon et at., 2020.</li>
 </ul>
+
 
 <h3 id="neural-graph-learning">Computer Vision</h3>
 
@@ -242,6 +248,7 @@ Overall, this tutorial gives an overview of multimodal learning, introduces a mu
 <li><a href="https://arxiv.org/abs/2006.07733">Bootstrap your own latent: A new approach to self-supervised Learning</a>, Grill et at., 2020.</li>
 <li><a href="https://arxiv.org/abs/2006.09882">Unsupervised Learning of Visual Features by Contrasting Cluster Assignments</a>, Caron et at., 2021.</li>
 </ul>
+
 
 <h3 id="multimodal-learning">Multimodal Learning</h3>
 
