--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
             ></iframe>
          <h2 id="slides">Dataset</h2>
          <a href="https://colab.research.google.com/github/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset.ipynb">Colab notebook</a> for Google Research recognizing-multimodal-entailment <a href="https://github.com/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset_v1.csv">dataset</a>.
+         <h2 id="slides">Illustrative example</h2>
+         <div style="display: flex">
+            <div style="width:750px;" align="center">
+               <img alt="Example of Multimodal Entailment" src="./images/multimodal_entailment.png" style="max-width:100%;">
+               </a><br>
+               Example of multimodal entailment where texts or images alone would not suffice for semantic understanding or pairwise classifications.
+            </div>
+         </div>
          <h2 id="reading-list">Reading list</h2>
          <h3 id="natural-language-processing">Natural Language Processing</h3>
          <ul>
