--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
          <iframe
             src="https://docs.google.com/presentation/d/1mAB31BCmqzfedreNZYn4hsKPFmgHA9Kxz219DzyRY3c/embed?usp=sharing&resourcekey=0-ndOW4fXhhrY_cuvDU4Wcxw"
             frameborder="0"
+            max-width="100%"
             width="800"
             height="600"
             ></iframe>
