--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
          <h2 id="dataset">Dataset</h2>
          <a href="https://colab.research.google.com/github/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset.ipynb">Colab notebook</a> for Google Research recognizing-multimodal-entailment <a href="https://github.com/google-research-datasets/recognizing-multimodal-entailment/blob/main/dataset_v1.csv">dataset</a>.
          <br><br>
-         A Tensorflow Keras baseline model authored by <a href="https://sayak.dev/">Sayak Paul</a> using pre-trained <a href="https://arxiv.org/abs/1603.05027">ResNet50V2</a> and <a href="https://arxiv.org/abs/1810.04805">BERT-base</a> encoders is available on this well documented <a href="https://keras.io/examples/nlp/multimodal_entailment/">Keras.io</a> page.
+         A Tensorflow Keras baseline model authored by <a href="https://sayak.dev/">Sayak Paul</a> using pre-trained <a href="https://arxiv.org/abs/1603.05027">ResNet50V2</a> and <a href="https://arxiv.org/abs/1810.04805">BERT-base</a> encoders is available on this well documented <a href="https://keras.io/examples/nlp/multimodal_entailment/">Keras.io</a> page, with the accompanying <a href="https://github.com/sayakpaul/Multimodal-Entailment-Baseline">repository</a>.
          <h2 id="example">Illustrative example</h2>
          <div style="display: flex">
             <div style="width:750px;" align="center">
